<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-15dp">

    <TextView
        android:id="@+id/android_titulo1"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="#00908181"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/android_txt_titulo1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/android_titulo2"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#00908181"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/android_txt_titulo2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_titulo1" />

    <EditText
        android:id="@+id/android_nome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/android_txt_nome"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_titulo2" />

    <EditText
        android:id="@+id/android_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/android_txt_sobrenome"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_nome" />

    <EditText
        android:id="@+id/android_curso"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/android_txt_curso"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_sobrenome" />

    <EditText
        android:id="@+id/android_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/android_txt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_celular" />

    <EditText
        android:id="@+id/android_celular"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:height="50dp"
        android:ems="10"
        android:hint="@string/android_txt_celular"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_curso" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/android_botao_limpar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/android_botao"
        android:text="@string/botao_limpar"
        app:layout_constraintEnd_toStartOf="@+id/android_botao_salvar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/android_botao_salvar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/android_botao"
        android:text="@string/botao_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/android_botao_finalizar"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/android_botao"
        android:text="@string/botao_finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_botao_salvar" />

</androidx.constraintlayout.widget.ConstraintLayout>